fix sidebar flicker on refresh

--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -51,7 +51,7 @@
   --breakpoint-lg: 1060px;
 }
 
-@layer base {
+@layer utilities {
   .text-preset-1 {
     font-size: 32px; 
     line-height: 120%;
